--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Bootstrap CSS -->
-            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
-                    rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-                    crossorigin="anonymous">
+        <title>Bootstrap demo</title>
+        <title>Bootstrap demo</title>
+             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+            
         <!-- My CSS -->           
             <link href="assets/styles/styles.css" rel="stylesheet">            
         <!-- Iconos de Bootstrap -->
@@ -357,7 +358,7 @@
             <div class="derechos-de-autor">
                 &#169; Miguelito y Junípero - Medellín / Santiago de Chile (2024) &#169;
             </div>
-        </footer>       
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        </footer>     
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>        
     </body>
 </html>
