--- a/index.html
+++ b/index.html
@@ -103,9 +103,12 @@
                 </nav>
             </header> 
         </section>
-            <section id="products" class="py-5 bg-light">
-            <h1 class="text-center seccion-titulo">Aquí resolverás tus requerimientos de timbres de impresión y grabados en Santiago</h1>
-            <div class="container">
+        <section id="products" class="py-5 bg-light">
+            <div class="container-lg"> <!-- Before container-->
+                <div class="text-center">
+                    <!--<h2 class="text-center seccion-titulo">Aquí resolverás tus requerimientos de timbres de impresión y grabados en Santiago</h1><-->
+                    <h2 class="display-6">Aquí resolverás tus requerimientos de timbres de impresión y grabados en Santiago</h2>    
+                </div>
                 <div class="row g-3">                
                     <div class="col-12 col-md-6 col-lg-4 text-center">
                         <div class="card">
